WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
217142
REGRESSION[267763] RELEASE_ASSERT in allNetworkProcesses hit when registering legacy protocol handlers before instantiating any WebKit objects
https://bugs.webkit.org/show_bug.cgi?id=217142
Summary
REGRESSION[267763] RELEASE_ASSERT in allNetworkProcesses hit when registering...
Alex Christensen
Reported
2020-09-30 12:42:24 PDT
REGRESSION[267763] RELEASE_ASSERT in allNetworkProcesses hit when registering legacy protocol handlers before instantiating any WebKit objects
Attachments
Patch
(2.42 KB, patch)
2020-09-30 12:46 PDT
,
Alex Christensen
beidson
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2020-09-30 12:46:18 PDT
Created
attachment 410147
[details]
Patch
Alex Christensen
Comment 2
2020-09-30 12:59:53 PDT
Comment on
attachment 410147
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=410147&action=review
> Source/WebKit/ChangeLog:12 > + This unfortunately can't be tested with our current infrastructure because TestsController's constructor calls initializeMainThread.
I verified that removing the initializeMainThread call from TestsController::TestsController causes me to hit the issue in the radar and this fixes it.
Alex Christensen
Comment 3
2020-09-30 13:27:56 PDT
http://trac.webkit.org/r267802
Radar WebKit Bug Importer
Comment 4
2020-09-30 13:28:36 PDT
<
rdar://problem/69805862
>
Geoffrey Garen
Comment 5
2020-10-01 09:11:02 PDT
Comment on
attachment 410147
[details]
Patch Shouldn't we have initialized WebKit2 when we created the WebProcessPool? If not, what about all the other functions here, like registerURLSchemeAsCORSEnabled?
Alex Christensen
Comment 6
2020-10-01 09:47:31 PDT
WebKit2 is initialized when making a WebProcessPool. The problem here is registerGlobalURLSchemeAsHavingCustomProtocolHandlers is static, so no WebProcessPool is instantiated.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug